--- a/about.html
+++ b/about.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<!-- This is a temporary file layout. We will use this layout for every pages. This page will be deleted after completion of the project. -->
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Musical contacts</title>
+    <title>Musical About</title>
 
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./index.css">
@@ -17,10 +16,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
-    <!-- Fontawesome icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -31,7 +26,7 @@
         </li>
         <li>
             <span>
-                <img src="./assets/icons/telephone.svg" alt="" class="icons"> 
+                <img src="./assets/icons/telephone.svg" alt="" class="icons">
                 <a href="tel:+1(21) 234 4567">+1(21) 234 4567</a>
             </span>
         </li>
@@ -65,22 +60,22 @@
             <button><img src="./assets/icons/search.svg" alt="" class="icons"></button>
         </div>
         <span class="login-register-icon">
-            <a href="./login.html" style="margin-right: 10px;" ><img src="./assets/icons/signin.svg" alt="login" class="icons"></a>
+            <a href="./login.html" style="margin-right: 10px;"><img src="./assets/icons/signin.svg" alt="login"
+                    class="icons"></a>
             <a href="./signup.html"><img src="./assets/icons/register.svg" alt="register" class="icons"></a>
         </span>
         <span class="menu-icon">
-            <i class="fa fa-list"></i>
+            <img src="./assets/icons/menu.svg" alt="menu" class="icons">
             <ul class="hidden-menu">
                 <li></li>
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./about.html">About Us</a></li>
                 <li><a href="./blogs.html">Blog</a></li>
-                <!-- <li><a href="./pages.html">Pages</a></li> -->
                 <li><a href="./contact.html">Contact</a></li>
                 <li>
                     <div class="search-bar">
                         <input type="search">
-                        <button><i class="fa fa-search"></i></button>
+                        <button><img src="./assets/icons/search.svg" class="icons" alt="search"></button>
                     </div>
                 </li>
             </ul>
@@ -99,20 +94,20 @@
     </div>
 
     <div class="contact-main-content">
-            <div class="contact-main">
-                <div>
-                    <h3 class="text">Welcome to Musical</h3>
-                    <p class="text">Welcome to Musical, where the harmonious world of music 
-                        unfolds before your very ears. We are a passionate 
-                        community of musicians, educators, and enthusiasts dedicated to 
-                        nurturing the musical talent within you. Our mission is 
-                        simple yet profound: to inspire, educate, and empower individuals on 
-                        their musical journey.
-                     </p><br>
-                     <button class="know-more">Know more about us</button>
-                </div>
+        <div class="contact-main">
+            <div>
+                <h3 class="text">Welcome to Musical</h3>
+                <p class="text">Welcome to Musical, where the harmonious world of music
+                    unfolds before your very ears. We are a passionate
+                    community of musicians, educators, and enthusiasts dedicated to
+                    nurturing the musical talent within you. Our mission is
+                    simple yet profound: to inspire, educate, and empower individuals on
+                    their musical journey.
+                </p><br>
+                <button class="know-more">Know more about us</button>
             </div>
-                <img src="./assets/images/about-us-image.png" alt="musicians" class="musician-image">
+        </div>
+        <img src="./assets/images/about-us-image.png" alt="musicians" class="musician-image">
     </div>
     <div class="sign-up-container">
         <div class="sign-up-child-container center-75">
