--- a/blogs.html
+++ b/blogs.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<!-- This is a temporary file layout. We will use this layout for every pages. This page will be deleted after completion of the project. -->
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Musical blogs</title>
+    <title>Musical Blogs</title>
 
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./blogs.css">
@@ -26,7 +25,7 @@
         </li>
         <li>
             <span>
-                <img src="./assets/icons/telephone.svg" alt="" class="icons"> 
+                <img src="./assets/icons/telephone.svg" alt="" class="icons">
                 <a href="tel:+1(21) 234 4567">+1(21) 234 4567</a>
             </span>
         </li>
@@ -60,22 +59,24 @@
             <button><img src="./assets/icons/search.svg" alt="" class="icons"></button>
         </div>
         <span class="login-register-icon">
-            <a href="./login.html" style="margin-right: 10px;" ><img src="./assets/icons/signin.svg" alt="login" class="icons"></a>
+            <a href="./login.html" style="margin-right: 10px;"><img src="./assets/icons/signin.svg" alt="login"
+                    class="icons"></a>
             <a href="./signup.html"><img src="./assets/icons/register.svg" alt="register" class="icons"></a>
         </span>
         <span class="menu-icon">
-            <i class="fa fa-list"></i>
+            <img src="./assets/icons/menu.svg" alt="menu" class="icons">
             <ul class="hidden-menu">
                 <li></li>
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./about.html">About Us</a></li>
                 <li><a href="./blogs.html">Blog</a></li>
-                <!-- <li><a href="./pages.html">Pages</a></li> -->
                 <li><a href="./contact.html">Contact</a></li>
                 <li>
                     <div class="search-bar">
                         <input type="search">
-                        <button><i class="fa fa-search"></i></button>
+                        <button>
+                            <img src="./assets/icons/search.svg" class="icons" alt="search">
+                        </button>
                     </div>
                 </li>
             </ul>
@@ -110,7 +111,7 @@
                             <span>NWOGU VICTOR</span>
                         </div>
                         <div class="blog-date">
-                            <img src="./assets/icons/calendar.svg" class="icons" >
+                            <img src="./assets/icons/calendar.svg" class="icons">
                             <span>July 2, 2023</span>
                         </div>
                     </div>
@@ -130,7 +131,7 @@
                             <span>Augustin Lopez</span>
                         </div>
                         <div class="blog-date">
-                            <img src="./assets/icons/calendar.svg" class="icons" >
+                            <img src="./assets/icons/calendar.svg" class="icons">
                             <span>August 12, 2023</span>
                         </div>
                     </div>
@@ -150,7 +151,7 @@
                             <span>Domantas Markevičius</span>
                         </div>
                         <div class="blog-date">
-                            <img src="./assets/icons/calendar.svg" class="icons" >
+                            <img src="./assets/icons/calendar.svg" class="icons">
                             <span>August 22, 2023</span>
                         </div>
                     </div>
@@ -170,7 +171,7 @@
                             <span>Levy Ralph Imanzi</span>
                         </div>
                         <div class="blog-date">
-                            <img src="./assets/icons/calendar.svg" class="icons" >
+                            <img src="./assets/icons/calendar.svg" class="icons">
                             <span>September 2, 2023</span>
                         </div>
                     </div>
