--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<!-- This is a temporary file layout. We will use this layout for every pages. This page will be deleted after completion of the project. -->
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Musical contacts</title>
+    <title>Musical Contacts</title>
 
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./contact.css">
@@ -17,10 +16,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
-    <!-- Fontawesome icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body style="background-color: #030303;">
@@ -31,7 +26,7 @@
         </li>
         <li>
             <span>
-                <img src="./assets/icons/telephone.svg" alt="" class="icons"> 
+                <img src="./assets/icons/telephone.svg" alt="" class="icons">
                 <a href="tel:+1(21) 234 4567">+1(21) 234 4567</a>
             </span>
         </li>
@@ -65,22 +60,22 @@
             <button><img src="./assets/icons/search.svg" alt="" class="icons"></button>
         </div>
         <span class="login-register-icon">
-            <a href="./login.html" style="margin-right: 10px;" ><img src="./assets/icons/signin.svg" alt="login" class="icons"></a>
+            <a href="./login.html" style="margin-right: 10px;"><img src="./assets/icons/signin.svg" alt="login"
+                    class="icons"></a>
             <a href="./signup.html"><img src="./assets/icons/register.svg" alt="register" class="icons"></a>
         </span>
         <span class="menu-icon">
-            <i class="fa fa-list"></i>
+            <img src="./assets/icons/menu.svg" alt="menu" class="icons">
             <ul class="hidden-menu">
                 <li></li>
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./about.html">About Us</a></li>
                 <li><a href="./blogs.html">Blog</a></li>
-                <!-- <li><a href="./pages.html">Pages</a></li> -->
                 <li><a href="./contact.html">Contact</a></li>
                 <li>
                     <div class="search-bar">
                         <input type="search">
-                        <button><i class="fa fa-search"></i></button>
+                        <button><img src="./assets/icons/search.svg" class="icons" alt="search"></button>
                     </div>
                 </li>
             </ul>
@@ -99,44 +94,38 @@
     </div>
 
     <div class="contact-main-content">
-            <div class="contact-main">
-                <form>
-                    <input class="input-container" type="text" placeholder="Your Name" required>
-                    <input class="input-container" type="email" placeholder="Your Email" required>
-                    <input class="input-container" type="text" placeholder="Subject" required>
-                    <textarea class="textarea-container" placeholder="Type your message here"></textarea>
-                    <button class="button-style" type="submit">Send message</button>
-                </form>
-            </div>
-            <div class="contact-sidebar">
-                <div class="container-right">
-                    <div class="contact-container">
-                        <h2 class="contact-title">Company address</h2>
-                        <p class="contact-text">Musical, 10001, 5th Avenue, 12202 street, London.</p>
-                    </div>
-                    <div class="contact-container">
-                        <h2 class="contact-title">Call Us</h2>
-                        <a href="tel:+1(21) 234 4567" class="contact-text">+1(21) 112 7368</a>
-                    </div>
-                    <div class="contact-container">
-                        <h2 class="contact-title">Email Us</h2>
-                        <a href="mailto:example@mail.com" class="contact-text">example@mail.com</a>
-                    </div>
-                    <div class="contact-container">
-                        <h2 class="contact-title">Customer Support</h2>
-                        <a href="mailto:info@support.com" class="contact-text">info@support.com</a>
-                    </div>
+        <div class="contact-main">
+            <form>
+                <input class="input-container" type="text" placeholder="Your Name" required>
+                <input class="input-container" type="email" placeholder="Your Email" required>
+                <input class="input-container" type="text" placeholder="Subject" required>
+                <textarea class="textarea-container" placeholder="Type your message here"></textarea>
+                <button class="button-style" type="submit">Send message</button>
+            </form>
+        </div>
+        <div class="contact-sidebar">
+            <div class="container-right">
+                <div class="contact-container">
+                    <h2 class="contact-title">Company address</h2>
+                    <p class="contact-text">Musical, 10001, 5th Avenue, 12202 street, London.</p>
+                </div>
+                <div class="contact-container">
+                    <h2 class="contact-title">Call Us</h2>
+                    <a href="tel:+1(21) 234 4567" class="contact-text">+1(21) 112 7368</a>
+                </div>
+                <div class="contact-container">
+                    <h2 class="contact-title">Email Us</h2>
+                    <a href="mailto:example@mail.com" class="contact-text">example@mail.com</a>
+                </div>
+                <div class="contact-container">
+                    <h2 class="contact-title">Customer Support</h2>
+                    <a href="mailto:info@support.com" class="contact-text">info@support.com</a>
                 </div>
             </div>
+        </div>
     </div>
-    <iframe
-        src="https://shorturl.at/hoFS0"
-        width="100%" 
-        height="450" 
-        class="map-frame" 
-        allowfullscreen="" 
-        loading="lazy" 
-        referrerpolicy="no-referrer-when-downgrade">
+    <iframe src="https://shorturl.at/hoFS0" width="100%" height="450" class="map-frame" allowfullscreen=""
+        loading="lazy" referrerpolicy="no-referrer-when-downgrade">
     </iframe>
     <!-- main section end -->
 
