--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<!-- This is a temporary file layout. We will use this layout for every pages. This page will be deleted after completion of the project. -->
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Musical homepage</title>
+    <title>Musical Homepage</title>
 
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./index.css">
@@ -16,10 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
-    <!-- Fontawesome icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 
 <body>
@@ -30,7 +26,7 @@
         </li>
         <li>
             <span>
-                <img src="./assets/icons/telephone.svg" alt="" class="icons"> 
+                <img src="./assets/icons/telephone.svg" alt="" class="icons">
                 <a href="tel:+1(21) 234 4567">+1(21) 234 4567</a>
             </span>
         </li>
@@ -64,22 +60,22 @@
             <button><img src="./assets/icons/search.svg" alt="" class="icons"></button>
         </div>
         <span class="login-register-icon">
-            <a href="./login.html" style="margin-right: 10px;" ><img src="./assets/icons/signin.svg" alt="login" class="icons"></a>
+            <a href="./login.html" style="margin-right: 10px;"><img src="./assets/icons/signin.svg" alt="login"
+                    class="icons"></a>
             <a href="./signup.html"><img src="./assets/icons/register.svg" alt="register" class="icons"></a>
         </span>
         <span class="menu-icon">
-            <i class="fa fa-list"></i>
+            <img src="./assets/icons/menu.svg" alt="menu" class="icons">
             <ul class="hidden-menu">
                 <li></li>
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./about.html">About Us</a></li>
                 <li><a href="./blogs.html">Blog</a></li>
-                <!-- <li><a href="./pages.html">Pages</a></li> -->
                 <li><a href="./contact.html">Contact</a></li>
                 <li>
                     <div class="search-bar">
                         <input type="search">
-                        <button><i class="fa fa-search"></i></button>
+                        <button><img src="./assets/icons/search.svg" class="icons" alt="search"></button>
                     </div>
                 </li>
             </ul>
@@ -91,58 +87,61 @@
     <!-- main section start -->
     <div class="index-main-content">
         <h3 class="title-style">
-            Our Best Music <span>Classes</span> 
+            Our Best Music <span>Classes</span>
         </h3>
-            <div class="flex-container">
-                <div class="flex-item">
-                    <div class="music-image-container">
-                        <img class="music-image-solid" src="./assets/images/music-solid.svg" alt="Music-icon"/>
-                    </div>
-                    <p class="flex-content">Lorem ipsum dolor sit amet, elit. Id ab commodi magnam fugiat accusamus eos.</p>
+        <div class="flex-container">
+            <div class="flex-item">
+                <div class="music-image-container">
+                    <img class="music-image-solid" src="./assets/images/music-solid.svg" alt="Music-icon" />
                 </div>
-
-                <div class="flex-item">
-                    <div class="music-image-container">
-                        <img class="music-image-solid" src="./assets/images/music-solid.svg" alt="Music-icon"/>
-                    </div>
-                    <p class="flex-content">Lorem ipsum dolor sit amet, elit. Id ab commodi magnam fugiat accusamus eos.</p>
-                </div>
-
-                <div class="flex-item">
-                    <div class="music-image-container">
-                        <img class="music-image-solid" src="./assets/images/music-solid.svg" alt="Music-icon"/>
-                    </div>
-                    <p class="flex-content">Lorem ipsum dolor sit amet, elit. Id ab commodi magnam fugiat accusamus eos.</p>
-                </div>
-
-                <div class="flex-item">
-                    <div class="music-image-container">
-                        <img class="music-image-solid" src="./assets/images/music-solid.svg" alt="Music-icon"/>
-                    </div>
-                    <p class="flex-content">Lorem ipsum dolor sit amet, elit. Id ab commodi magnam fugiat accusamus eos.</p>
-                </div>
+                <p class="flex-content">Lorem ipsum dolor sit amet, elit. Id ab commodi magnam fugiat accusamus eos.</p>
             </div>
 
-            <div class="quote-container">
-                <blockquote class="quote-container-child">
-                    <p class="quote-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, doloremque sapiente, soluta iste autem suscipit, quas modi sunt asperiores facere ipsam magni adipisci blanditiis dignissimos. Modi quasi aliquam debitis in!</p>
-                    <p class="quote-cite">-Loremnis</p>
-                </blockquote>
+            <div class="flex-item">
+                <div class="music-image-container">
+                    <img class="music-image-solid" src="./assets/images/music-solid.svg" alt="Music-icon" />
+                </div>
+                <p class="flex-content">Lorem ipsum dolor sit amet, elit. Id ab commodi magnam fugiat accusamus eos.</p>
             </div>
 
-            <div class="sign-up-container">
-                <div class="sign-up-child-container center-75">
-                    <div class="sign-up-flex-container center-75">    
-                        <div class="sign-up-left-container">
-                            <h4 class="sign-up-title">Call to action! It's time!</h3>
-                            <p class="sign-up-content">Sign up for our product by clicking that button right over there!</p>
-                        </div>
-                        <div class="sign-up-right-container">
-                            <a href="./signup.html"><button class="sign-up-button">Sign up</button></a>
-                        </div>
+            <div class="flex-item">
+                <div class="music-image-container">
+                    <img class="music-image-solid" src="./assets/images/music-solid.svg" alt="Music-icon" />
+                </div>
+                <p class="flex-content">Lorem ipsum dolor sit amet, elit. Id ab commodi magnam fugiat accusamus eos.</p>
+            </div>
+
+            <div class="flex-item">
+                <div class="music-image-container">
+                    <img class="music-image-solid" src="./assets/images/music-solid.svg" alt="Music-icon" />
+                </div>
+                <p class="flex-content">Lorem ipsum dolor sit amet, elit. Id ab commodi magnam fugiat accusamus eos.</p>
+            </div>
+        </div>
+
+        <div class="quote-container">
+            <blockquote class="quote-container-child">
+                <p class="quote-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, doloremque
+                    sapiente, soluta iste autem suscipit, quas modi sunt asperiores facere ipsam magni adipisci
+                    blanditiis dignissimos. Modi quasi aliquam debitis in!</p>
+                <p class="quote-cite">-Loremnis</p>
+            </blockquote>
+        </div>
+
+        <div class="sign-up-container">
+            <div class="sign-up-child-container center-75">
+                <div class="sign-up-flex-container center-75">
+                    <div class="sign-up-left-container">
+                        <h4 class="sign-up-title">Call to action! It's time!</h3>
+                            <p class="sign-up-content">Sign up for our product by clicking that button right over there!
+                            </p>
+                    </div>
+                    <div class="sign-up-right-container">
+                        <a href="./signup.html"><button class="sign-up-button">Sign up</button></a>
                     </div>
                 </div>
             </div>
+        </div>
     </div>
     <!-- main section end -->
 
