--- a/signup.html
+++ b/signup.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<!-- This is a temporary file layout. We will use this layout for every pages. This page will be deleted after completion of the project. -->
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Musical sign up</title>
+    <title>Musical Sign up</title>
 
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./index.css">
@@ -17,14 +16,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
-    <!-- Fontawesome icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
-    <!-- Background -->
     <!-- header section start -->
     <nav>
         <li>
@@ -32,7 +26,7 @@
         </li>
         <li>
             <span>
-                <img src="./assets/icons/telephone.svg" alt="" class="icons"> 
+                <img src="./assets/icons/telephone.svg" alt="" class="icons">
                 <a href="tel:+1(21) 234 4567">+1(21) 234 4567</a>
             </span>
         </li>
@@ -66,22 +60,22 @@
             <button><img src="./assets/icons/search.svg" alt="" class="icons"></button>
         </div>
         <span class="login-register-icon">
-            <a href="./login.html" style="margin-right: 10px;" ><img src="./assets/icons/signin.svg" alt="login" class="icons"></a>
+            <a href="./login.html" style="margin-right: 10px;"><img src="./assets/icons/signin.svg" alt="login"
+                    class="icons"></a>
             <a href="./signup.html"><img src="./assets/icons/register.svg" alt="register" class="icons"></a>
         </span>
         <span class="menu-icon">
-            <i class="fa fa-list"></i>
+            <img src="./assets/icons/menu.svg" alt="menu" class="icons">
             <ul class="hidden-menu">
                 <li></li>
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./about.html">About Us</a></li>
                 <li><a href="./blogs.html">Blog</a></li>
-                <!-- <li><a href="./pages.html">Pages</a></li> -->
                 <li><a href="./contact.html">Contact</a></li>
                 <li>
                     <div class="search-bar">
                         <input type="search">
-                        <button><i class="fa fa-search"></i></button>
+                        <button><img src="./assets/icons/search.svg" class="icons" alt="search"></button>
                     </div>
                 </li>
             </ul>
@@ -93,39 +87,41 @@
     <!-- main section start -->
     <div class="main-content">
 
-    
-    <div class="background-image"><img src="./assets/images/signin-image-1.jpg" alt="rythm"></div>
 
-    <div class="container">
-        <h2>Sign Up</h2>
-        <form action="#" method="post">
-            <div class="input-group">
-                <label for="username">Create a Username</label>
-                <input type="text" id="username" name="username" required>
-            </div>
-            <div class="input-group">
-                <label for="email">Enter your Email</label>
-                <input type="email" id="email" name="email" required>
-            </div>
-            <div class="input-group">
-                <label for="password">Create a Password</label>
-                <input type="password" id="password" name="password" required>
-            </div>
-            <div class="input-group">
-                <label for="password">Repeat Password</label>
-                <input type="password" id="password" name="password" required>
-            </div>
-            <button type="submit" class="btn">Sign Up</button>
-        </form>
+        <div class="background-image"><img src="./assets/images/signin-image-1.jpg" alt="rythm"></div>
+
+        <div class="container">
+            <h2>Sign Up</h2>
+            <form action="#" method="post">
+                <div class="input-group">
+                    <label for="username">Create a Username</label>
+                    <input type="text" id="username" name="username" required>
+                </div>
+                <div class="input-group">
+                    <label for="email">Enter your Email</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div class="input-group">
+                    <label for="password">Create a Password</label>
+                    <input type="password" id="password" name="password" required>
+                </div>
+                <div class="input-group">
+                    <label for="password">Repeat Password</label>
+                    <input type="password" id="password" name="password" required>
+                </div>
+                <button type="submit" class="btn">Sign Up</button>
+            </form>
+        </div>
     </div>
-</div>
     <!-- main section end -->
 
     <!-- footer section start -->
     <footer>
         Copyright &copy; The Kreativs 2023
-        
-        <p><a href="https://www.freepik.com/free-vector/beautiful-musical-notes-wave-background-design_1443913.htm#query=music&position=14&from_view=search&track=sph">Image by starline</a> on Freepik</p>
+
+        <p><a
+                href="https://www.freepik.com/free-vector/beautiful-musical-notes-wave-background-design_1443913.htm#query=music&position=14&from_view=search&track=sph">Image
+                by starline</a> on Freepik</p>
     </footer>
     <!-- footer section end -->
 
